update FixedAspectRatioBox to deal with small heights and large widths - container was overflowing off bottom of page

--- a/src/components/Partials/FixedAspectRatioBox/FixedAspectRatioBox.scss
+++ b/src/components/Partials/FixedAspectRatioBox/FixedAspectRatioBox.scss
@@ -12,3 +12,9 @@
   width: 100%;
   height: 100%;
 }
+
+.aspectRatioBoxHeightController {
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
